--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,95 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
 
+    <!-- External Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+
+    <!-- Nav CSS -->
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+    <!-- Header CSS -->
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+
+    <!-- Form CSS -->
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
+    <!-- Tweet Header CSS -->
+    <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <!-- Character Counter JS -->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/76db24dbc3.js" crossorigin="anonymous"></script>
+
+
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <span class="logo">tweeter</span>
+      <p><span class ="bold-700">Write</span> a new tweet</p>
+      
     </nav>
 
+    <!-- Header -->
+    <header class="OG">
+      <div>
+        <img src="/images/nic-cage.jpg">
+      </div>
+      <br>
+      <div>
+        <h2><span class="bold-600">Victor</span> Yu</h2>
+      </div>
+    </header>
+
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form action="/tweets/" method="POST">
+          <textarea id="twit" name="text" placeholder="What are you humming about?"></textarea>
+          <input type="submit" value="Tweet">
+          <span class="counter">140</span>
+        </form>
+
+      <section id="tweet-container">
+          <article>
+            <header>
+              <div class="profile">
+              <img src="/images/nic-cage-small.jpeg">
+              <p>Victor Yu</p>
+              </div>
+              <span class="handle">@nicfuckingcage</span>
+            </header>
+            <p>blah nic cage blah</p>
+            <footer>
+              <p>10 days ago</p>
+
+              <div class="linkage">
+                <i class="fas fa-flag"></i>
+                <i class="fas fa-retweet"></i>
+                <i class="fas fa-heart"></i>
+              </div>
+
+            </footer>
+          </article>
+
+
+      </section>
+
+
+      </section>
+    </main>
   </body>
 </html>
