--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,6 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <h2>Compose Tweet</h2>
         <form action="/tweets/" method="POST">
           <textarea id="twit" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
@@ -78,7 +77,7 @@
               </div>
               <span class="handle">@nicfuckingcage</span>
             </header>
-            <p>blah nic cage blah</p>
+            <p>THE BEES!</p>
             <footer>
               <p>10 days ago</p>
 
