--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
 
       <!-- New Tweets Section -->
       <section id="new-tweet">
+        <h2 id="error"></h2>
         <form id="newbie" action="/tweets/" method="POST">
           <textarea id="twit" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
@@ -76,24 +77,6 @@
       
         <!-- Tweets Section -->
       <section id="tweet-container">
-          <article>
-            <header>
-              <div class="profile">
-              <img src="/images/nic-cage-small.jpeg">
-              <p>Victor Yu</p>
-              </div>
-              <span class="handle">@nicfuckingcage</span>
-            </header>
-            <p>THE BEES!</p>
-            <footer>
-              <p>10 days ago</p>
-              <div class="linkage">
-                <i class="fas fa-flag"></i>
-                <i class="fas fa-retweet"></i>
-                <i class="fas fa-heart"></i>
-              </div>
-            </footer>
-          </article>
       </section>
       
     </main>
