Added second toggle button, smooth scroll and changed timing of animations

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
     <!-- Character Counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
+    <!-- Scroll To Top Button JS -->
+    <script type="text/javascript" src="/scripts/composer.js"></script>
+
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/76db24dbc3.js" crossorigin="anonymous"></script>
 
@@ -44,9 +47,9 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="logo">tweeter</span>
-      <div class="newButton">
+      <div id="newButton">
         <p><span class ="bold-700">Write</span> a new tweet</p>
-        <img id="click" src="/images/nic-cage-small.jpeg">
+        <img id="click" src="/images/nic-cage.jpg">
         <!-- <i class="fas fa-angle-double-down"></i> -->
       </div>
     </nav>
@@ -80,5 +83,7 @@
       </section>
       
     </main>
+<!-- <button id="scrollButton" title="Go to top">Top</button> -->
+    <img id="scrollButton" src="/images/john-travolta.jpg">
   </body>
 </html>
