Cleaned up, commented and fully functional code.  Not linted, and some more cleaning and commenting to be done

--- a/public/index.html
+++ b/public/index.html
@@ -3,46 +3,31 @@
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
-
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-
     <!-- External Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
-
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
     <!-- Nav CSS -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-
     <!-- Header CSS -->
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-
     <!-- Form CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-
     <!-- Tweet Header CSS -->
     <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
-
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-
     <!-- Character Counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-
     <!-- Scroll To Top Button JS -->
     <script type="text/javascript" src="/scripts/composer.js"></script>
-
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/76db24dbc3.js" crossorigin="anonymous"></script>
-
-
   </head>
-
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
@@ -53,21 +38,18 @@
         <!-- <i class="fas fa-angle-double-down"></i> -->
       </div>
     </nav>
-
     <!-- Header -->
     <header class="OG">
       <div>
-        <img src="/images/nic-cage.jpg">
+        <img src="/images/iguana.jpg">
       </div>
       <br>
       <div>
-        <h2><span class="bold-600">Victor</span> Yu</h2>
+        <h1>💚 <span class="bold-600">Iguanas</span> are the best 💚</h1>
       </div>
     </header>
-
     <!-- Page-specific (main) content here -->
     <main class="container">
-
       <!-- New Tweets Section -->
       <section id="new-tweet">
         <h2 id="error"></h2>
@@ -77,13 +59,11 @@
           <span class="counter">140</span>
         </form>
       </section>
-      
         <!-- Tweets Section -->
       <section id="tweet-container">
       </section>
-      
     </main>
-<!-- <button id="scrollButton" title="Go to top">Top</button> -->
+    <!-- <button id="scrollButton" title="Go to top">Top</button> -->
     <img id="scrollButton" src="/images/john-travolta.jpg">
   </body>
 </html>
